application details Api
