# routes/api.php
@@ -2,6 +2,9 @@
 
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\NocApplicationController;
+use App\Http\Controllers\common\AppCommonController;
+
+Route::post('/application/view', [AppCommonController::class, 'viewApplication']);
 
 Route::post(
     '/noc/applications',
